--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 :root {
-  --ot-bg-color: white;
+  --ot-bg-color: rgba(255, 255, 255, 0.75);
   --ot-fg-color: green;
   --ot-button-bg-primary: green;
   --ot-button-bg-active: darkgreen;
   --ot-button-fg: white;
+  --ot-input-bg-primary: green;
+  --ot-input-bg-active: darkgreen;
+  --ot-input-fg: white;
 }
 
-@media screen and (prefers-color-scheme: dark) {
+/* @media screen and (prefers-color-scheme: dark) {
   :root {
     --ot-bg-color: rgb(0, 64, 0);
     --ot-fg-color: rgba(255, 255, 255, 0.75);
@@ -15,4 +18,4 @@
     --ot-button-bg-active: green;
     --ot-button-fg: white;
   }
-}
+} */
