--- a/src/components/Panel/styles.module.css
+++ b/src/components/Panel/styles.module.css
@@ -2,12 +2,12 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
   background-color: var(--ot-bg-color);
   color: var(--ot-fg-color);
-  border: 4px solid var(--ot-bg-color);
   border-radius: 8px;
-  padding: 8px;
+  padding: 12px;
   font-size: 16px;
   min-width: 240px;
   max-width: 640px;
   width: 100%;
   line-height: 1.5em;
+  backdrop-filter: blur(4px);
 }
