--- a/src/components/Settings/styles.module.css
+++ b/src/components/Settings/styles.module.css
@@ -14,13 +14,13 @@
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
   background-color: var(--ot-bg-color);
   color: var(--ot-fg-color);
-  border: 4px solid var(--ot-bg-color);
   border-radius: 8px;
-  padding: 8px;
+  padding: 12px;
   font-size: 16px;
   min-width: 240px;
   max-width: 640px;
   margin: 0 24px;
+  backdrop-filter: blur(8px);
 }
 
 .button {
@@ -40,8 +40,8 @@
 
 .input {
   font-size: 16px;
-  background-color: white;
-  color: green;
+  background-color: var(--ot-input-bg-primary);
+  color: var(--ot-input-fg);
   border: none;
   border-radius: 8px;
   display: block;
@@ -50,6 +50,11 @@
   padding: 4px 8px;
   font-family: monospace;
   box-sizing: border-box;
+}
+
+.input:hover,
+.input:active {
+  background-color: var(--ot-input-bg-active);
 }
 
 .text {
